force-app/main/default/objects/student_1__c/student_1__c.object-meta.xml
<CustomObject>
    <description>this helps to add the info of the students</description>
    <label>student</label>
    <nameField>
        <label>student name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>