force-app/main/default/objects/student_1__c/fields/mentor_name__c.field-meta.xml
<CustomField>
    <fullName>mentor_name__c</fullName>
    <label>mentor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>please check the mentor list,where atleast one mentor exist with</errorMessage>
        <filterItems>
            <field>mentor__c.M_Email__c</field>
            <operation>equals</operation>
            <value>rakesh@test.com</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>mentor__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>