force-app/main/default/objects/student_1__c/fields/student_email__c.field-meta.xml
<CustomField>
    <fullName>student_email__c</fullName>
    <description>this captures email id of the student</description>
    <inlineHelpText>help me with student email id</inlineHelpText>
    <label>student email</label>
    <type>Email</type>
</CustomField>