force-app/main/default/objects/student_1__c/fields/student_phone_no__c.field-meta.xml
<CustomField>
    <fullName>student_phone_no__c</fullName>
    <description>this will take exactly 10 numbers as a input</description>
    <label>student phone no.</label>
    <type>Phone</type>
</CustomField>